LLM trocada e funcionando corretamente.

--- a/server/.env
+++ b/server/.env
@@ -18,3 +18,16 @@ ICONS_FILE_PATH=js/icons.js
 # Upload limits
 MAX_FILE_SIZE_MB=20
 MAX_UPLOAD_FILES=40
+
+# Image normalization profile (all new uploads become .webp)
+THUMB_MAX_WIDTH=800
+GALLERY_MAX_WIDTH=2000
+WEBP_QUALITY=82
+
+# Allow inline style attribute in sanitized HTML descriptions
+ENABLE_INLINE_STYLE=false
+
+# Local AI translation (Ollama)
+OLLAMA_URL=http://localhost:11434
+OLLAMA_MODEL=gemma3:12b
+OLLAMA_TIMEOUT_MS=300000
