--- a/server/.env.example
+++ b/server/.env.example
@@ -26,3 +26,8 @@ WEBP_QUALITY=82
 
 # Allow inline style attribute in sanitized HTML descriptions
 ENABLE_INLINE_STYLE=false
+
+# Local AI translation (Ollama)
+OLLAMA_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:70b
+OLLAMA_TIMEOUT_MS=300000
