Adição de botão de delete + Thumbnail maker + Crop de imagens automatico + Kaban no projects modal.

--- a/server/.env.example
+++ b/server/.env.example
@@ -20,7 +20,8 @@ MAX_FILE_SIZE_MB=20
 MAX_UPLOAD_FILES=40
 
 # Image normalization profile (all new uploads become .webp)
-THUMB_MAX_WIDTH=800
+THUMB_TARGET_WIDTH=248
+THUMB_CARD_ASPECT_RATIO=1.7256637168
 GALLERY_MAX_WIDTH=2000
 WEBP_QUALITY=82
 
