--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "@tiptap/react": "^3.20.0",
     "@tiptap/starter-kit": "^3.20.0",
     "dompurify": "^3.3.1",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
